2 Local Kubernetes/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: account-ingress
  namespace: account
spec:
  rules:
  - host: account.aline.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: account-service
            port: 
              number: 8072
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  namespace: bank
spec:
  rules:
  - host: bank.aline.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bank-service
            port: 
              number: 8083
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: card-ingress
  namespace: card
spec:
  rules:
  - host: card.aline.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: card-service
            port: 
              number: 8084
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transaction-ingress
  namespace: transaction
spec:
  rules:
  - host: transaction.aline.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: transaction-service
            port: 
              number: 8073
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: underwriter-ingress
  namespace: underwriter
spec:
  rules:
  - host: underwriter.aline.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: underwriter-service
            port: 
              number: 8071
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  namespace: user
spec:
  rules:
  - host: user.aline.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: user-service
            port: 
              number: 8070
